# ldi_dvf

./: .env.example  .gitignore  CLAUDE.md  RAG_README.md  README.md  app.py  pyproject.toml
config/: defaults.yaml
data/models/: model_predict_days.pkl  model_predict_value.pkl  scaler.pkl
data/processed/: X_test.csv  X_train.csv  df_grouped_ensues_2020_2025_houses.csv  df_grouped_ensues_2020_2025_houses_cleaned.csv  y_days_test.csv  y_days_train.csv  y_value_test.csv  y_value_train.csv
data/results/: predictions.csv  test_results.json
notebooks/: 01_dvf_exploration.ipynb  01_dvf_exploration_house_ensues1_example.ipynb  02_dvf_exploration_houses_france_mutations.ipynb  03_dvf_clean_duplicates_houses.ipynb  04_dvf_dataprep_train_test.ipynb  04_dvf_dataprep_train_test_ensues.ipynb  04_dvf_dataprep_train_test_ensues_randomforestregressor.ipynb  05_dvf_dataprep_train_test_survival_analysis.ipynb  06_dvf_eda_france_cleaned.ipynb  07_dvf_ensues_vector.ipynb
scripts/: build_vectorstore.py  download_dvf_sample.py  test_openai_api.py
src/dvf/: __init__.py  analyze.py  load.py  query.py  rag.py
tests/: test_load.py
