[project]
name = "ldi-dvf"
version = "0.1.0"
description = "Data science project for analyzing DVF data (Demandes de Valeurs Foncières - French real estate mutations)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "jupyter>=1.0.0",
    "jupyterlab>=4.2.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "pyarrow>=15.0.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "scikit-learn>=1.4.0",
    "joblib>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]
geo = [
    "geopandas>=0.14.0",
    "shapely>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dvf"]

[tool.hatch.build.targets.sdist]
packages = ["src/dvf"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
